@@ -1,3 +1,10 @@
+2013-05-31  Anton Kolesov <anton.kolesov@synopsys.com>
+
+	* get-random-port.sh: Script that returns random port number that is free.
+	* dejagnu/nsim-extra.exp, dejagnu/baseboards/arc-nsim.exp: Use
+	get-random-port.sh instead of incremented ports and set very big
+	max_reload_reboots value.
+
 2013-05-23	Anton Kolesov <anton.kolesov@synopsys.com>
 
 	* dejagnu/nsim-extra.exp, dejagnu/baseboards/arc-nsim.exp: Change
